# medibook

./: .env.example  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  fix_slugs.py  populate_data.py  pyproject.toml  render.yaml  requirements.txt  translation_implementation_report.md
apps/appointments/: admin.py  apps.py  email_service.py  forms.py  models.py  payment_views.py  signals.py  translation.py  urls.py  views.py
apps/clinics/: admin.py  apps.py  forms.py  models.py  translation.py  urls.py  views.py
apps/core/: urls.py  views.py
apps/dashboard/: apps.py  urls.py  views.py
apps/doctors/: admin.py  apps.py  forms.py  models.py  translation.py  urls.py  views.py
apps/services/: admin.py  apps.py  models.py  translation.py  urls.py  views.py
apps/users/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
config/: settings.py  urls.py
static/css/: custom.css
static/js/: custom.js
templates/: base.html  home.html
templates/account/: confirm_email.html  email.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
templates/appointments/: cancel_with_fee.html  create.html  detail.html  manage_cards.html  my_appointments.html  past.html  payment.html  payment_history.html  payment_success.html  saved_card_payment.html  upcoming.html
templates/clinics/: detail.html  list.html
tests/: test_payments.py  test_user.py
utils/: decorators.py  helpers.py  mixins.py
(+84 files in other folders)
